Update GOOGLE_API_KEY in .env.example
Updated GOOGLE_API_KEY in the example file.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Google Gemini API Key
 # Get your API key from: https://makersuite.google.com/app/apikey
-GOOGLE_API_KEY=your_api_key_here
+GOOGLE_API_KEY="AIzaSyAhuxqmnAfYV5dudm2qUCQK5omjF54P0d8"
 
 # Server Configuration
 PORT=5000
